feat: complete Java 17 TCP and HTTP SDK