@@ -3,16 +3,23 @@ package com.ferricstore;
 import static com.ferricstore.CommandArgs.append;
 import static com.ferricstore.CommandArgs.appendBool;
 import static com.ferricstore.CommandArgs.appendEncoded;
+import static com.ferricstore.CommandArgs.appendEntries;
+import static com.ferricstore.CommandArgs.appendMutationFields;
 import static com.ferricstore.CommandArgs.appendNamedValues;
+import static com.ferricstore.CommandArgs.appendNames;
 import static com.ferricstore.CommandArgs.appendPayloadRead;
 import static com.ferricstore.CommandArgs.args;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import java.util.ArrayList;
 import java.util.LinkedHashMap;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
 
 public final class FerricStoreClient implements AutoCloseable {
+    private static final ObjectMapper JSON = new ObjectMapper();
     private final CommandExecutor executor;
     private final AutoCloseable closeable;
     private final Codec codec;
@@ -31,6 +38,10 @@ public final class FerricStoreClient implements AutoCloseable {
     private final CountMinSketchStore cms;
     private final TopKStore topk;
     private final TDigestStore tdigest;
+    private final FlowSteps flowSteps;
+    private final FlowInsights flowInsights;
+    private final FlowSchedules flowSchedules;
+    private final FlowGovernance flowGovernance;
 
     private FerricStoreClient(CommandExecutor executor, AutoCloseable closeable, Codec codec) {
         this.executor = executor;
@@ -51,6 +62,10 @@ public final class FerricStoreClient implements AutoCloseable {
         this.cms = new CountMinSketchStore(this);
         this.topk = new TopKStore(this);
         this.tdigest = new TDigestStore(this);
+        this.flowSteps = new FlowSteps(executor, this.codec);
+        this.flowInsights = new FlowInsights(executor);
+        this.flowSchedules = new FlowSchedules(executor);
+        this.flowGovernance = new FlowGovernance(executor);
     }
 
     public static FerricStoreClient connect(String ferricUri) {
@@ -58,8 +73,47 @@ public final class FerricStoreClient implements AutoCloseable {
     }
 
     public static FerricStoreClient connect(String ferricUri, Codec codec) {
-        NativeExecutor executor = NativeExecutor.connect(ferricUri);
-        return new FerricStoreClient(executor, executor, codec);
+        String scheme = endpointScheme(ferricUri);
+        if ("http".equals(scheme) || "https".equals(scheme)) {
+            return connect(ferricUri, codec, HttpTransportOptions.defaults());
+        }
+        if ("ferric".equals(scheme) || "ferrics".equals(scheme)) {
+            return connect(ferricUri, codec, NativeTransportOptions.defaults());
+        }
+        throw unsupportedScheme();
+    }
+
+    /** Connects by URL scheme while applying HTTP-only transport options when applicable. */
+    public static FerricStoreClient connect(
+            String endpoint, Codec codec, HttpTransportOptions httpOptions) {
+        String scheme = endpointScheme(endpoint);
+        if ("http".equals(scheme) || "https".equals(scheme)) {
+            HttpExecutor executor = HttpExecutor.connect(endpoint, httpOptions);
+            return new FerricStoreClient(executor, executor, codec);
+        }
+        if ("ferric".equals(scheme) || "ferrics".equals(scheme)) {
+            throw new IllegalArgumentException(
+                    "HttpTransportOptions can only be used with http:// or https:// URLs");
+        }
+        throw unsupportedScheme();
+    }
+
+    /** Connects to native TCP/TLS with optional caller-provided TLS trust/key material. */
+    public static FerricStoreClient connect(
+            String endpoint, Codec codec, NativeTransportOptions nativeOptions) {
+        if (nativeOptions == null) {
+            throw new IllegalArgumentException("native transport options cannot be null");
+        }
+        String scheme = endpointScheme(endpoint);
+        if ("ferric".equals(scheme) || "ferrics".equals(scheme)) {
+            NativeExecutor executor = NativeExecutor.connect(endpoint, nativeOptions.sslContext());
+            return new FerricStoreClient(executor, executor, codec);
+        }
+        if ("http".equals(scheme) || "https".equals(scheme)) {
+            throw new IllegalArgumentException(
+                    "NativeTransportOptions can only be used with ferric:// or ferrics:// URLs");
+        }
+        throw unsupportedScheme();
     }
 
     public static FerricStoreClient fromExecutor(CommandExecutor executor) {
@@ -82,8 +136,24 @@ public final class FerricStoreClient implements AutoCloseable {
         return executor.execute(copyArgs(args));
     }
 
+    /** Executes a catalogued Flow command with transport-independent arguments. */
+    public Object command(FlowCommand command, Object... args) {
+        List<Object> values = new ArrayList<>(args.length + 1);
+        values.add(command.wireName());
+        values.addAll(List.of(args));
+        return executor.execute(values);
+    }
+
     public List<Object> pipeline(List<List<Object>> commands) {
         return executor.pipeline(commands.stream().map(FerricStoreClient::copyArgs).toList());
+    }
+
+    /** Executes an FQL1 query and returns its complete versioned result envelope. */
+    public Map<String, Object> flowQuery(String query, Map<String, ?> params) {
+        if (query == null || query.isBlank()) {
+            throw new IllegalArgumentException("Flow query must not be blank");
+        }
+        return Resp.map(executor.flowQuery(query, Map.copyOf(params)));
     }
 
     public KeyValueStore kv() {
@@ -146,6 +216,96 @@ public final class FerricStoreClient implements AutoCloseable {
         return tdigest;
     }
 
+    public FlowSteps flowSteps() {
+        return flowSteps;
+    }
+
+    public FlowInsights flowInsights() {
+        return flowInsights;
+    }
+
+    public FlowSchedules flowSchedules() {
+        return flowSchedules;
+    }
+
+    public FlowGovernance flowGovernance() {
+        return flowGovernance;
+    }
+
+    public FerricStoreTransaction transaction() {
+        return transaction(List.of());
+    }
+
+    public FerricStoreTransaction transaction(List<String> watchKeys) {
+        return new FerricStoreTransaction(sessionFactory(), codec, List.copyOf(watchKeys));
+    }
+
+    public FerricStorePubSub pubsubSession() {
+        return new FerricStorePubSub(sessionFactory(), codec);
+    }
+
+    public Object ping() {
+        return command("PING");
+    }
+
+    public Object ping(Object message) {
+        return command("PING", message);
+    }
+
+    public Object echo(Object message) {
+        return command("ECHO", message);
+    }
+
+    public long dbsize() {
+        return Resp.number(command("DBSIZE"));
+    }
+
+    public boolean flushdb(Object... options) {
+        return CommandArgs.ok(command(prefix("FLUSHDB", options)));
+    }
+
+    public boolean flushall(Object... options) {
+        return CommandArgs.ok(command(prefix("FLUSHALL", options)));
+    }
+
+    public Object commandInfo(String... names) {
+        List<Object> command = args("COMMAND");
+        if (names.length > 0) {
+            command.add("INFO");
+            command.addAll(List.of(names));
+        }
+        return command(command);
+    }
+
+    public Object slowlog(String subcommand, Object... arguments) {
+        List<Object> command = args("SLOWLOG", subcommand);
+        command.addAll(List.of(arguments));
+        return command(command);
+    }
+
+    public Object memory(String subcommand, Object... arguments) {
+        List<Object> command = args("MEMORY", subcommand);
+        command.addAll(List.of(arguments));
+        return command(command);
+    }
+
+    public Object config(String subcommand, Object... arguments) {
+        List<Object> command = args("CONFIG", subcommand);
+        command.addAll(List.of(arguments));
+        return command(command);
+    }
+
+    public long publish(String channel, Object message) {
+        FlowValidation.requireText(channel, "channel");
+        return Resp.number(command("PUBLISH", channel, codec.encode(message)));
+    }
+
+    public Object pubsub(String subcommand, Object... arguments) {
+        List<Object> command = args("PUBSUB", subcommand);
+        command.addAll(List.of(arguments));
+        return command(command);
+    }
+
     public Object create(CreateOptions options) {
         long now = options.nowMs() == 0 ? nowMs() : options.nowMs();
         long runAt = options.runAtMs() == 0 ? now : options.runAtMs();
@@ -169,6 +329,8 @@ public final class FerricStoreClient implements AutoCloseable {
         appendBool(cmd, "IDEMPOTENT", options.idempotent());
         append(cmd, "RETENTION_TTL_MS", options.retentionTtlMs());
         FlowMaxActive.append(cmd, options.maxActiveMs());
+        appendEntries(cmd, "ATTRIBUTE", options.attributes());
+        appendEntries(cmd, "STATE_META", options.stateMeta());
         appendNamedValues(cmd, codec, options.values(), options.valueRefs());
         appendReturnRecord(cmd, options.returnRecord());
         Object response = command(cmd);
@@ -187,6 +349,8 @@ public final class FerricStoreClient implements AutoCloseable {
                         .runAtMs(options.runAtMs())
                         .nowMs(options.nowMs())
                         .maxActiveMs(options.maxActiveMs())
+                        .attributes(options.attributes())
+                        .stateMeta(options.stateMeta())
                         .values(options.values())
                         .valueRefs(options.valueRefs())
                         .returnRecord(options.returnRecord());
@@ -234,6 +398,8 @@ public final class FerricStoreClient implements AutoCloseable {
         appendBool(cmd, "INDEPENDENT", options.independent());
         append(cmd, "RETENTION_TTL_MS", options.retentionTtlMs());
         FlowMaxActive.append(cmd, options.maxActiveMs());
+        appendEntries(cmd, "ATTRIBUTE", options.attributes());
+        appendEntries(cmd, "STATE_META", options.stateMeta());
         boolean mapped = options.items().stream().anyMatch(item -> item.maxActiveMs() != null);
         boolean extended =
                 options.items().stream()
@@ -290,18 +456,31 @@ public final class FerricStoreClient implements AutoCloseable {
         append(cmd, "PRIORITY", options.priority());
         append(cmd, "RETENTION_TTL_MS", options.retentionTtlMs());
         FlowMaxActive.append(cmd, options.maxActiveMs());
+        appendEntries(cmd, "ATTRIBUTE", options.attributes());
+        appendEntries(cmd, "STATE_META", options.stateMeta());
         appendNamedValues(cmd, codec, options.values(), options.valueRefs());
         return Resp.optionalRecord(command(cmd), codec);
     }
 
-    public Object valuePut(
+    public Map<String, Object> valuePut(
             Object value, String name, String ownerFlowId, String partitionKey, Long ttlMs) {
+        return valuePut(value, name, ownerFlowId, partitionKey, ttlMs, null);
+    }
+
+    public Map<String, Object> valuePut(
+            Object value,
+            String name,
+            String ownerFlowId,
+            String partitionKey,
+            Long ttlMs,
+            Boolean override) {
         List<Object> cmd = args("FLOW.VALUE.PUT", codec.encode(value), "NOW", nowMs());
         append(cmd, "PARTITION", partitionKey);
         append(cmd, "OWNER_FLOW_ID", ownerFlowId);
         append(cmd, "NAME", name);
+        appendBool(cmd, "OVERRIDE", override);
         append(cmd, "TTL", ttlMs);
-        return command(cmd);
+        return Resp.parseKv(command(cmd));
     }
 
     public List<Object> valueMGet(List<String> refs) {
@@ -336,12 +515,30 @@ public final class FerricStoreClient implements AutoCloseable {
             String partitionKey,
             Map<String, ?> values,
             List<String> ifStates) {
-        List<Object> cmd = args("FLOW.SIGNAL", id, "SIGNAL", signal);
-        append(cmd, "PARTITION", partitionKey);
-        ifStates.forEach(ifState -> append(cmd, "IF_STATE", ifState));
-        append(cmd, "TRANSITION_TO", transitionTo);
-        append(cmd, "NOW", nowMs());
-        appendNamedValues(cmd, codec, values, Map.of());
+        SignalOptions.Builder options = SignalOptions.builder(signal).partitionKey(partitionKey);
+        ifStates.forEach(options::ifState);
+        if (transitionTo != null) {
+            options.transitionTo(transitionTo);
+        }
+        values.forEach(options::value);
+        return signal(id, options.build());
+    }
+
+    public Object signal(String id, SignalOptions options) {
+        List<Object> cmd = args("FLOW.SIGNAL", id, "SIGNAL", options.signal());
+        append(cmd, "PARTITION", options.partitionKey());
+        append(cmd, "IDEMPOTENCY", options.idempotencyKey());
+        options.ifStates().forEach(ifState -> append(cmd, "IF_STATE", ifState));
+        append(cmd, "TRANSITION_TO", options.transitionTo());
+        append(cmd, "RUN_AT", options.runAtMs());
+        Object effectiveNow = options.nowMs();
+        if (effectiveNow == null) {
+            effectiveNow = nowMs();
+        }
+        append(cmd, "NOW", effectiveNow);
+        appendNamedValues(cmd, codec, options.values(), options.valueRefs());
+        appendNames(cmd, "DROP_VALUE", options.dropValues());
+        appendNames(cmd, "OVERRIDE_VALUE", options.overrideValues());
         return command(cmd);
     }
 
@@ -401,6 +598,7 @@ public final class FerricStoreClient implements AutoCloseable {
         appendEncoded(cmd, "PAYLOAD", codec, options.payload());
         append(cmd, "RUN_AT", runAt);
         append(cmd, "PRIORITY", options.priority());
+        appendMutationFields(cmd, options.mutationFields());
         appendNamedValues(cmd, codec, options.values(), options.valueRefs());
         appendReturnRecord(cmd, options.returnRecord());
         Object response = command(cmd);
@@ -421,6 +619,7 @@ public final class FerricStoreClient implements AutoCloseable {
         appendEncoded(cmd, "RESULT", codec, options.result());
         appendEncoded(cmd, "PAYLOAD", codec, options.payload());
         append(cmd, "TTL", options.ttlMs());
+        appendMutationFields(cmd, options.mutationFields());
         appendNamedValues(cmd, codec, options.values(), options.valueRefs());
         appendReturnRecord(cmd, options.returnRecord());
         Object response = command(cmd);
@@ -441,6 +640,8 @@ public final class FerricStoreClient implements AutoCloseable {
         appendEncoded(cmd, "ERROR", codec, options.error());
         appendEncoded(cmd, "PAYLOAD", codec, options.payload());
         append(cmd, "RUN_AT", options.runAtMs() == 0 ? null : options.runAtMs());
+        appendMutationFields(cmd, options.mutationFields());
+        appendNamedValues(cmd, codec, options.values(), options.valueRefs());
         appendReturnRecord(cmd, options.returnRecord());
         Object response = command(cmd);
         return options.returnRecord() ? Resp.optionalRecord(response, codec) : response;
@@ -460,6 +661,8 @@ public final class FerricStoreClient implements AutoCloseable {
         appendEncoded(cmd, "ERROR", codec, options.error());
         appendEncoded(cmd, "PAYLOAD", codec, options.payload());
         append(cmd, "TTL", options.ttlMs());
+        appendMutationFields(cmd, options.mutationFields());
+        appendNamedValues(cmd, codec, options.values(), options.valueRefs());
         appendReturnRecord(cmd, options.returnRecord());
         Object response = command(cmd);
         return options.returnRecord() ? Resp.optionalRecord(response, codec) : response;
@@ -478,6 +681,8 @@ public final class FerricStoreClient implements AutoCloseable {
         append(cmd, "PARTITION", options.partitionKey());
         appendEncoded(cmd, "REASON", codec, options.reason());
         append(cmd, "TTL", options.ttlMs());
+        appendMutationFields(cmd, options.mutationFields());
+        appendNamedValues(cmd, codec, options.values(), options.valueRefs());
         appendReturnRecord(cmd, options.returnRecord());
         Object response = command(cmd);
         return options.returnRecord() ? Resp.optionalRecord(response, codec) : response;
@@ -496,6 +701,11 @@ public final class FerricStoreClient implements AutoCloseable {
         append(cmd, "TTL", options.ttlMs());
         append(cmd, "NOW", options.nowMs() == 0 ? nowMs() : options.nowMs());
         appendBool(cmd, "INDEPENDENT", options.independent());
+        appendMutationFields(cmd, options.mutationFields());
+        appendNamedValues(cmd, codec, options.values(), options.valueRefs());
+        if (options.returnOkOnSuccess()) {
+            append(cmd, "RETURN", "OK_ON_SUCCESS");
+        }
         appendClaimedItems(cmd, options.partitionKey(), options.items());
         return recordsOrResponse(command(cmd));
     }
@@ -515,6 +725,7 @@ public final class FerricStoreClient implements AutoCloseable {
         append(cmd, "PRIORITY", options.priority());
         append(cmd, "NOW", options.nowMs() == 0 ? nowMs() : options.nowMs());
         appendBool(cmd, "INDEPENDENT", options.independent());
+        appendMutationFields(cmd, options.mutationFields());
         appendNamedValues(cmd, codec, options.values(), options.valueRefs());
         appendFencedItems(cmd, options.partitionKey(), options.items(), true);
         return recordsOrResponse(command(cmd));
@@ -533,6 +744,7 @@ public final class FerricStoreClient implements AutoCloseable {
         append(cmd, "RUN_AT", options.runAtMs() == 0 ? null : options.runAtMs());
         append(cmd, "NOW", options.nowMs() == 0 ? nowMs() : options.nowMs());
         appendBool(cmd, "INDEPENDENT", options.independent());
+        appendMutationFields(cmd, options.mutationFields());
         appendNamedValues(cmd, codec, options.values(), options.valueRefs());
         appendClaimedItems(cmd, options.partitionKey(), options.items());
         return recordsOrResponse(command(cmd));
@@ -551,6 +763,7 @@ public final class FerricStoreClient implements AutoCloseable {
         append(cmd, "TTL", options.ttlMs());
         append(cmd, "NOW", options.nowMs() == 0 ? nowMs() : options.nowMs());
         appendBool(cmd, "INDEPENDENT", options.independent());
+        appendMutationFields(cmd, options.mutationFields());
         appendNamedValues(cmd, codec, options.values(), options.valueRefs());
         appendClaimedItems(cmd, options.partitionKey(), options.items());
         return recordsOrResponse(command(cmd));
@@ -568,6 +781,7 @@ public final class FerricStoreClient implements AutoCloseable {
         append(cmd, "TTL", options.ttlMs());
         append(cmd, "NOW", options.nowMs() == 0 ? nowMs() : options.nowMs());
         appendBool(cmd, "INDEPENDENT", options.independent());
+        appendMutationFields(cmd, options.mutationFields());
         appendNamedValues(cmd, codec, options.values(), options.valueRefs());
         appendFencedItems(cmd, options.partitionKey(), options.items(), false);
         return recordsOrResponse(command(cmd));
@@ -580,11 +794,7 @@ public final class FerricStoreClient implements AutoCloseable {
     }
 
     public List<FlowRecord> list(String type, String state, String partitionKey, int count) {
-        List<Object> cmd = args("FLOW.LIST", type);
-        append(cmd, "STATE", state);
-        append(cmd, "PARTITION", partitionKey);
-        append(cmd, "COUNT", count == 0 ? null : count);
-        return Resp.records(command(cmd), codec);
+        return queryRecords(FlowQueries.list(type, state, partitionKey, count));
     }
 
     public Object rewind(
@@ -615,43 +825,58 @@ public final class FerricStoreClient implements AutoCloseable {
     }
 
     public List<FlowRecord> terminals(String type, String state, String partitionKey, int count) {
-        List<Object> cmd = args("FLOW.TERMINALS", type);
-        appendReadOptions(cmd, state, partitionKey, count, null, null, null);
-        return Resp.records(command(cmd), codec);
+        return queryRecords(FlowQueries.terminals(type, state, partitionKey, count));
     }
 
     public List<FlowRecord> failures(String type, String partitionKey, int count) {
-        List<Object> cmd = args("FLOW.FAILURES", type);
-        appendReadOptions(cmd, null, partitionKey, count, null, null, null);
-        return Resp.records(command(cmd), codec);
+        return queryRecords(FlowQueries.failures(type, partitionKey, count));
     }
 
     public List<FlowRecord> byParent(String parentFlowId, String partitionKey, int count) {
-        return indexQuery("FLOW.BY_PARENT", parentFlowId, partitionKey, count);
+        return queryRecords(
+                FlowQueries.lineage("parent_flow_id", parentFlowId, partitionKey, count, "DESC"));
     }
 
     public List<FlowRecord> byRoot(String rootFlowId, String partitionKey, int count) {
-        return indexQuery("FLOW.BY_ROOT", rootFlowId, partitionKey, count);
+        return queryRecords(
+                FlowQueries.lineage("root_flow_id", rootFlowId, partitionKey, count, "ASC"));
     }
 
     public List<FlowRecord> byCorrelation(String correlationId, String partitionKey, int count) {
-        return indexQuery("FLOW.BY_CORRELATION", correlationId, partitionKey, count);
+        return queryRecords(
+                FlowQueries.lineage("correlation_id", correlationId, partitionKey, count, "DESC"));
     }
 
     public List<FlowRecord> stuck(
             String type, String partitionKey, int count, Long olderThanMs, Long nowMs) {
-        List<Object> cmd = args("FLOW.STUCK", type);
-        append(cmd, "PARTITION", partitionKey);
-        append(cmd, "COUNT", count == 0 ? null : count);
-        append(cmd, "OLDER_THAN", olderThanMs);
-        append(cmd, "NOW", nowMs);
-        return Resp.records(command(cmd), codec);
+        long effectiveNow = nowMs == null ? nowMs() : nowMs;
+        long effectiveAge = olderThanMs == null ? 0L : olderThanMs;
+        return queryRecords(
+                FlowQueries.stuck(type, partitionKey, count, effectiveAge, effectiveNow));
     }
 
     public List<Object> history(String id, String partitionKey, int count) {
-        List<Object> cmd = args("FLOW.HISTORY", id);
-        append(cmd, "PARTITION", partitionKey);
-        append(cmd, "COUNT", count == 0 ? null : count);
+        return history(
+                id, HistoryOptions.builder().partitionKey(partitionKey).count(count).build());
+    }
+
+    public List<Object> history(String id, HistoryOptions options) {
+        FlowValidation.requireText(id, "flow id");
+        List<Object> cmd = args("FLOW.HISTORY", id, "COUNT", options.count());
+        append(cmd, "PARTITION", options.partitionKey());
+        append(cmd, "FROM_EVENT", options.fromEvent());
+        append(cmd, "TO_EVENT", options.toEvent());
+        append(cmd, "FROM_MS", options.fromMs());
+        append(cmd, "TO_MS", options.toMs());
+        append(cmd, "FROM_VERSION", options.fromVersion());
+        append(cmd, "TO_VERSION", options.toVersion());
+        appendBool(cmd, "REV", options.reverse());
+        append(cmd, "EVENT", options.event());
+        append(cmd, "WORKER", options.worker());
+        appendBool(cmd, "INCLUDE_COLD", options.includeCold());
+        appendBool(cmd, "CONSISTENT_PROJECTION", options.consistentProjection());
+        appendBool(cmd, "VALUES", options.values());
+        append(cmd, "PAYLOAD_MAX_BYTES", options.payloadMaxBytes());
         return Resp.list(command(cmd));
     }
 
@@ -706,8 +931,7 @@ public final class FerricStoreClient implements AutoCloseable {
                 options.children().stream()
                         .anyMatch(
                                 child -> !child.values().isEmpty() || !child.valueRefs().isEmpty());
-        boolean mapped =
-                options.children().stream().anyMatch(child -> child.maxActiveMs() != null);
+        boolean mapped = options.children().stream().anyMatch(child -> child.maxActiveMs() != null);
         if (mapped) {
             cmd.add("ITEMS_MAPS");
             cmd.add(options.children().size());
@@ -755,19 +979,45 @@ public final class FerricStoreClient implements AutoCloseable {
 
     public Object installPolicy(String type, FlowPolicyOptions options) {
         List<Object> cmd = args("FLOW.POLICY.SET", type);
+        append(cmd, "EXPECTED_GENERATION", options.expectedGeneration());
+        appendBool(cmd, "REPLACE", options.replace());
         FlowMaxActive.append(cmd, options.maxActiveMs());
-        append(cmd, "STATE", options.state());
-        RetryPolicy retry = options.retry();
-        if (retry != null) {
-            append(cmd, "MAX_RETRIES", retry.maxRetries());
-            append(cmd, "BACKOFF", retry.backoff());
-            append(cmd, "BASE_MS", retry.baseMs());
-            append(cmd, "MAX_MS", retry.maxMs());
-            append(cmd, "JITTER_PCT", retry.jitterPct());
-            append(cmd, "EXHAUSTED_TO", retry.exhaustedTo());
+        if (options.indexedAttributesPresent()) {
+            append(cmd, "INDEXED_ATTRIBUTES", json(options.indexedAttributes()));
         }
+        append(cmd, "INDEXED_STATE_META", options.indexedStateMeta());
         append(cmd, "RETENTION_TTL_MS", options.retentionTtlMs());
+        if (options.state() == null) {
+            appendRetryPolicy(cmd, options.retry());
+        } else {
+            append(cmd, "STATE", options.state());
+            append(cmd, "MODE", wireMode(options.mode()));
+            appendRetryPolicy(cmd, options.retry());
+        }
+        for (Map.Entry<String, FlowStatePolicy> entry : options.states().entrySet()) {
+            cmd.add("STATE");
+            cmd.add(entry.getKey());
+            FlowStatePolicy policy = entry.getValue();
+            append(cmd, "MODE", wireMode(policy.mode()));
+            appendRetryPolicy(cmd, policy.retry());
+        }
         return command(cmd);
+    }
+
+    private static void appendRetryPolicy(List<Object> cmd, RetryPolicy retry) {
+        if (retry == null) {
+            return;
+        }
+        append(cmd, "MAX_RETRIES", retry.maxRetries());
+        append(cmd, "BACKOFF", retry.backoff());
+        append(cmd, "BASE_MS", retry.baseMs());
+        append(cmd, "MAX_MS", retry.maxMs());
+        append(cmd, "JITTER_PCT", retry.jitterPct());
+        append(cmd, "EXHAUSTED_TO", retry.exhaustedTo());
+    }
+
+    private static String wireMode(FlowStateMode mode) {
+        return mode == null ? null : mode.name();
     }
 
     public Map<String, Object> policyGet(String type, String state) {
@@ -782,13 +1032,7 @@ public final class FerricStoreClient implements AutoCloseable {
         FlowValidation.requireText(effectKey, "effect key");
         FlowValidation.requireText(effectType, "effect type");
         List<Object> cmd =
-                args(
-                        "FLOW.EFFECT.RESERVE",
-                        id,
-                        "EFFECT_KEY",
-                        effectKey,
-                        "EFFECT_TYPE",
-                        effectType);
+                args("FLOW.EFFECT.RESERVE", id, "EFFECT_KEY", effectKey, "EFFECT_TYPE", effectType);
         append(cmd, "PARTITION", options.partitionKey());
         append(cmd, "LEASE_TOKEN", options.leaseToken());
         append(cmd, "FENCING", options.fencingToken());
@@ -872,7 +1116,7 @@ public final class FerricStoreClient implements AutoCloseable {
 
     public RateLimitResult ratelimitAdd(String key, long windowMs, long max, long count) {
         List<Object> response = Resp.list(command("RATELIMIT.ADD", key, windowMs, max, count));
-        String status = response.isEmpty() ? "" : Resp.string(response.getFirst());
+        String status = response.isEmpty() ? "" : Resp.string(response.get(0));
         long used = response.size() > 1 ? Resp.number(response.get(1)) : 0;
         long remaining = response.size() > 2 ? Resp.number(response.get(2)) : 0;
         long resetMs = response.size() > 3 ? Resp.number(response.get(3)) : 0;
@@ -898,16 +1142,14 @@ public final class FerricStoreClient implements AutoCloseable {
                         hint == null
                                 ? command("FETCH_OR_COMPUTE", key, ttlMs)
                                 : command("FETCH_OR_COMPUTE", key, ttlMs, hint));
-        String status = response.isEmpty() ? "" : Resp.string(response.getFirst());
+        String status = response.isEmpty() ? "" : Resp.string(response.get(0));
         if ("hit".equals(status)) {
             if (response.size() != 2) {
                 throw new FerricStoreException(
                         "FETCH_OR_COMPUTE hit response must contain exactly two values");
             }
             Object value =
-                    response.get(1) instanceof byte[] bytes
-                            ? codec.decode(bytes)
-                            : response.get(1);
+                    response.get(1) instanceof byte[] bytes ? codec.decode(bytes) : response.get(1);
             return new FetchOrComputeResult(status, value, null, null, true, false);
         }
         if (!"compute".equals(status) || response.size() != 3) {
@@ -935,11 +1177,7 @@ public final class FerricStoreClient implements AutoCloseable {
 
     public boolean fetchOrComputeError(String key, Object ownershipToken, String message) {
         return CommandArgs.ok(
-                command(
-                        "FETCH_OR_COMPUTE_ERROR",
-                        key,
-                        ownershipToken(ownershipToken),
-                        message));
+                command("FETCH_OR_COMPUTE_ERROR", key, ownershipToken(ownershipToken), message));
     }
 
     public Map<String, Object> clusterHealth() {
@@ -1011,6 +1249,14 @@ public final class FerricStoreClient implements AutoCloseable {
         return Resp.string(section == null ? command("INFO") : command("INFO", section));
     }
 
+    private SessionExecutorFactory sessionFactory() {
+        if (executor instanceof SessionExecutorFactory factory) {
+            return factory;
+        }
+        throw new IllegalStateException(
+                "connection-affine sessions require the native TCP/TLS transport");
+    }
+
     @Override
     public void close() {
         if (closeable == null) {
@@ -1033,6 +1279,9 @@ public final class FerricStoreClient implements AutoCloseable {
         }
         if (options.includeState() && !options.jobOnly()) {
             throw new IllegalArgumentException("includeState requires jobOnly=true");
+        }
+        if (options.includeAttributes() && !options.jobOnly()) {
+            throw new IllegalArgumentException("includeAttributes requires jobOnly=true");
         }
         List<Object> cmd = args(command, options.type());
         if (options.states().isEmpty()) {
@@ -1058,7 +1307,7 @@ public final class FerricStoreClient implements AutoCloseable {
         }
         append(cmd, "VALUE_MAX_BYTES", options.valueMaxBytes());
         if (options.jobOnly()) {
-            append(cmd, "RETURN", options.includeState() ? "JOBS_COMPACT_STATE" : "JOBS_COMPACT");
+            append(cmd, "RETURN", compactReturnMode(options, true));
         }
         appendBool(cmd, "RECLAIM_EXPIRED", options.reclaimExpired());
         append(cmd, "RECLAIM_RATIO", options.reclaimRatio());
@@ -1075,6 +1324,9 @@ public final class FerricStoreClient implements AutoCloseable {
         }
         if (options.includeState() && !options.jobOnly()) {
             throw new IllegalArgumentException("includeState requires jobOnly=true");
+        }
+        if (options.includeAttributes() && !options.jobOnly()) {
+            throw new IllegalArgumentException("includeAttributes requires jobOnly=true");
         }
         List<Object> cmd =
                 args(
@@ -1101,7 +1353,7 @@ public final class FerricStoreClient implements AutoCloseable {
         }
         append(cmd, "VALUE_MAX_BYTES", options.valueMaxBytes());
         if (options.jobOnly()) {
-            append(cmd, "RETURN", options.includeState() ? "JOBS_COMPACT_STATE" : "JOBS_COMPACT");
+            append(cmd, "RETURN", compactReturnMode(options, false));
         }
         return cmd;
     }
@@ -1199,8 +1451,8 @@ public final class FerricStoreClient implements AutoCloseable {
     private Object recordsOrResponse(Object response) {
         if (response instanceof List<?> list
                 && (list.isEmpty()
-                        || list.getFirst() instanceof Map<?, ?>
-                        || list.getFirst() instanceof List<?>)) {
+                        || list.get(0) instanceof Map<?, ?>
+                        || list.get(0) instanceof List<?>)) {
             return Resp.records(response, codec);
         }
         return response;
@@ -1219,28 +1471,28 @@ public final class FerricStoreClient implements AutoCloseable {
         return List.copyOf(copy);
     }
 
-    private List<FlowRecord> indexQuery(
-            String command, String key, String partitionKey, int count) {
-        List<Object> cmd = args(command, key);
-        append(cmd, "PARTITION", partitionKey);
-        append(cmd, "COUNT", count == 0 ? null : count);
-        return Resp.records(command(cmd), codec);
+    private static String endpointScheme(String endpoint) {
+        if (endpoint == null || endpoint.isBlank()) {
+            return "";
+        }
+        int separator = endpoint.indexOf(':');
+        return separator <= 0 ? "" : endpoint.substring(0, separator).toLowerCase(Locale.ROOT);
     }
 
-    private static void appendReadOptions(
-            List<Object> cmd,
-            String state,
-            String partitionKey,
-            int count,
-            Long fromMs,
-            Long toMs,
-            Boolean rev) {
-        append(cmd, "STATE", state);
-        append(cmd, "PARTITION", partitionKey);
-        append(cmd, "COUNT", count == 0 ? null : count);
-        append(cmd, "FROM_MS", fromMs);
-        append(cmd, "TO_MS", toMs);
-        appendBool(cmd, "REV", rev);
+    private static IllegalArgumentException unsupportedScheme() {
+        return new IllegalArgumentException(
+                "FerricStore SDK URLs must use ferric://, ferrics://, http://, or https://");
+    }
+
+    private List<FlowRecord> queryRecords(FlowQueries.Request request) {
+        Map<String, Object> response = flowQuery(request.query(), request.params());
+        if (!"ferric.flow.query.result/v1".equals(Resp.string(response.get("version")))) {
+            throw new FerricStoreException("expected ferric.flow.query.result/v1 response");
+        }
+        if (!response.containsKey("records")) {
+            throw new FerricStoreException("Flow query response is missing records");
+        }
+        return Resp.records(response.get("records"), codec);
     }
 
     private static Map<String, Object> mergeValues(Map<String, ?> base, Map<String, ?> item) {
@@ -1305,7 +1557,26 @@ public final class FerricStoreClient implements AutoCloseable {
                 options.values(),
                 options.valueMaxBytes(),
                 true,
-                options.includeState());
+                options.includeState(),
+                options.includeAttributes());
+    }
+
+    private static String compactReturnMode(ClaimDueOptions options, boolean includeStateAllowed) {
+        if (includeStateAllowed && options.includeState() && options.includeAttributes()) {
+            return "JOBS_COMPACT_STATE_ATTRS";
+        }
+        if (includeStateAllowed && options.includeState()) {
+            return "JOBS_COMPACT_STATE";
+        }
+        return options.includeAttributes() ? "JOBS_COMPACT_ATTRS" : "JOBS_COMPACT";
+    }
+
+    private static String json(Object value) {
+        try {
+            return JSON.writeValueAsString(value);
+        } catch (JsonProcessingException error) {
+            throw new IllegalArgumentException("Flow policy value is not JSON-compatible", error);
+        }
     }
 
     private static String requiredPartition(CreateItem item) {
