@@ -8,9 +8,9 @@ final class NativeRouting {
 
     static Object routeKey(List<Object> command) {
         if (command.size() < 2) {
-            return command.getFirst();
+            return command.get(0);
         }
-        String name = Resp.string(command.getFirst()).toUpperCase(Locale.ROOT);
+        String name = Resp.string(command.get(0)).toUpperCase(Locale.ROOT);
         if (name.startsWith("FLOW.EFFECT.")) {
             for (int index = 2; index + 1 < command.size(); index++) {
                 if ("PARTITION".equalsIgnoreCase(Resp.string(command.get(index)))) {
